# gh-random-star

./: .gitignore  README.md  gh-random-star  pyproject.toml  requirements.txt
.github/workflows/: pypi-publish.yml
github_random_star/: __init__.py  __main__.py  api.py  extension.py  main.py  utility.py  version.py
github_random_star/commands/: __init__.py  meta.py  repo.py  star.py
tests/: conftest.py  test_cli.py  test_integration.py  test_main.py
tests/files/: load_test.json
tests/files/github_random_star/: cache.json  ddkasa_cache.json  ddkasa_repo_cache.json
